[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss/Boss2.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "GirisAni"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -200, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 31 )

[node name="Boss2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GirisAni"
anims/GirisAni = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( -31, 0 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="ShootPosition2" type="Position2D" parent="."]
position = Vector2( -31, 31 )

[node name="ShootPosition3" type="Position2D" parent="."]
position = Vector2( -31, -29 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
